--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/webpack-env": "^1.18.4",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.8.2",
+    "nuxt-headlessui": "^1.1.5",
     "nuxt-icon": "^0.6.7",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.7",
@@ -25,6 +26,8 @@
     "vue-tsc": "^1.8.25"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.1.1",
+    "@nuxt/image": "^1.1.0",
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
     "require-context": "^1.1.0",
