--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "pinia": "^2.1.7",
     "require-context": "^1.1.0",
     "vue-gallery-slideshow": "^1.5.2"
+  },
+  "overides": {
+    "vue": "latest"
   }
 }
