--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,3 +1,7 @@
 {
-  "extends": "../.nuxt/tsconfig.server.json"
+  "extends": "../.nuxt/tsconfig.server.json",
+  "exclude": [
+    "../tailwind.config.js",
+    "../CSLewisPhotos/tailwind.config.js"
+  ]
 }
