--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@heroicons/vue": "^2.1.1",
     "@nuxt/image": "^1.1.0",
     "@stripe/stripe-js": "^7.5.0",
+    "convex": "^1.25.4",
     "nuxt-icons": "^3.2.1",
     "pinia": "^2.1.7",
     "require-context": "^1.1.0",
